css/global.css
/* ... */
/* ==========================================================================
 Breakpoints
========================================================================== */
@media (max-width: 759px) {
  .frame > div[class*="-section"] {
    padding: 2em 1em; } }
@media (min-width: 760px) {
  .frame > div[class*="-section"] {
    margin-left: auto;
    margin-right: auto;
    max-width: 960px;
    position: relative;
    width: 100%;
    padding: 2em; } }
.cluster {
  position: absolute; }

.cluster-one {
  left: -40px;
  top: 120px; }

.cluster-two {
  right: -40px;
  top: 30%; }

.cluster-three {
  left: -40px;
  top: 60%; }

.cluster-four {
  right: -40px;
  top: 90%; }

.circle {
  border-radius: 50%;
  opacity: .2;
  position: absolute; }

.circle-one {
  background: #CAFFCD;
  height: 150px;
  width: 150px; }

.circle-two {
  background: #FFBCD5;
  height: 150px;
  width: 150px;
  left: 70px;
  top: 50px; }

.circle-three {
  background: #B4DEFF;
  height: 150px;
  width: 150px;
  top: 120px;
  left: 0; }

.circle-four {
  background: #CAFFCD;
  height: 150px;
  width: 150px;
  right: 0; }

.circle-five {
  background: #FFBCD5;
  height: 150px;
  width: 150px;
  right: 70px;
  top: 50px; }

.circle-six {
  background: #B4DEFF;
  height: 150px;
  width: 150px;
  top: 120px;
  right: 0; }

.circle-seven {
  background: #CAFFCD;
  height: 150px;
  width: 150px; }

.circle-eight {
  background: #FFBCD5;
  height: 150px;
  width: 150px;
  left: 70px;
  top: 50px; }

.circle-nine {
  background: #B4DEFF;
  height: 150px;
  width: 150px;
  top: 120px;
  left: 0; }

.circle-ten {
  background: #CAFFCD;
  height: 150px;
  width: 150px;
  right: 0; }

.circle-eleven {
  background: #FFBCD5;
  height: 150px;
  width: 150px;
  right: 70px;
  top: 50px; }

.circle-twelve {
  background: #B4DEFF;
  height: 150px;
  width: 150px;
  top: 120px;
  right: 0; }

/* ==========================================================================
 Sections
========================================================================== */
/* ==========================================================================
 Hero
========================================================================== */
.hero-section {
  margin-left: auto;
  margin-right: auto;
  max-width: 960px;
  position: relative;
  width: 100%;
  overflow: hidden; }
  .hero-section .media-unit {
    overflow: hidden; }
  .hero-section .image-unit {
    border-radius: 6px;
    max-width: 320px;
    text-align: center; }
    .hero-section .image-unit > img {
      border-radius: 6px;
      margin-bottom: 20px; }

.logo {
  height: 60px;
  margin-bottom: .5em; }

.intro {
  color: #333;
  margin-bottom: 1.5em; }

/* ==========================================================================
 Breakpoints
========================================================================== */
@media (max-width: 759px) {
  .hero-section {
    text-align: center; }
    .hero-section .image-unit {
      margin-bottom: 20px;
      margin-left: auto;
      margin-right: auto; }
    .hero-section .book-button {
      max-width: 320px;
      width: 100%; }

  .intro {
    font-size: 1.28571429em;
    text-align: left; } }
@media (min-width: 760px) {
  .hero-section .image-unit {
    margin-right: 26px; }

  .logo {
    margin-top: -24px; }

  .intro {
    font-size: 24px; } }
/* ==========================================================================
 Contact
========================================================================== */
.contact-section {
  margin-left: auto;
  margin-right: auto;
  max-width: 960px;
  position: relative;
  width: 100%; }

.contact-container > .col {
  vertical-align: bottom; }

/* ==========================================================================
 Breakpoints
========================================================================== */
@media (max-width: 500px) {
  .contact-section .contact-info > .col {
    display: block;
    margin-top: 3em;
    margin-left: 0;
    width: 100%; }
    .contact-section .contact-info > .col:first-child {
      margin-top: 0; } }
@media (max-width: 860px) {
  .contact-section > .col-container > .col {
    display: block;
    width: 100%; }
  .contact-section > .col-container .form-col {
    margin-left: 0; }
    .contact-section > .col-container .form-col .stacked-form {
      margin: 0 auto;
      max-width: 500px;
      width: 100%; }

  .contact-info {
    margin-bottom: 60px; }
    .contact-info > .col {
      display: inline-block;
      margin-left: 10%;
      width: 30%; }
      .contact-info > .col:first-child {
        margin-left: 0; } }
/* ==========================================================================
 Testimonials
========================================================================== */
.testimonial-section {
  margin-left: auto;
  margin-right: auto;
  max-width: 960px;
  position: relative;
  width: 100%;
  border-bottom: 1px solid #e9eff2;
  border-top: 1px solid #e9eff2;
  padding: 2em;
  text-align: center; }

.sub-text {
  margin-bottom: 40px; }

blockquote {
  color: #403e3e;
  font-size: 1.57142857em;
  /* 22 / 14 */
  font-style: italic;
  margin: 0 0 1em; }

cite {
  color: #75858f;
  font-size: 1.14285714em;
  /* 16 / 14 */ }

.review {
  margin: 0 0 1em; }

.yelp-link {
  color: #ff70b3;
  font-size: 1.28571429em;
  /* 18 / 14 */ }

/* ==========================================================================
 BREAKPOINTS
========================================================================== */
@media (min-width: 740px) {
  .review {
    display: inline-block;
    margin: 0 15% 0 0;
    min-height: 240px;
    text-align: left;
    vertical-align: middle;
    width: 65%; }

  .yelp-link {
    display: inline-block;
    text-align: left;
    vertical-align: middle;
    width: 20%; } }
/* ... */

